# gnnepcsaft_mcp_server

./: .gitignore  README.md  __init__.py  mcp_server.py  pyproject.toml  utils.py
.github/workflows/: pypi.yml
gnnepcsaft_mcp_server/: __init__.py  mcp_server.py  plot_utils.py  utils.py
gnnepcsaft_mcp_server/.github/workflows/: pypi.yml
gnnepcsaft_mcp_server/models/: .gitignore
tests/: conftest.py  test_utils.py
