[project]
name = "gnnepcsaft-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for GNNePCSAFT tools"
authors = [
    {name = "wildsonbbl",email = "wil_bbl@hotmail.com"}
]
license = {text = "GNU General Public License v3.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "onnxruntime (>=1.21.0,<2.0.0)",
    "gnnepcsaft (>=0.2.2,<0.3.0)",
    "mcp (>=1.6.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
